<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="awaiting_action">Awaiting Action</string>
    <string name="buying_amp_selling"><![CDATA[BUYING & SELLING]]></string>
    <string name="valuations">VALUATIONS</string>
    <string name="book_a_free_valuation">Book a free valuation</string>
    <string name="upcoming_valuations">Upcoming valuations</string>
    <string name="viewings">VIEWINGS</string>
    <string name="confirmed">Confirmed</string>
    <string name="history">History</string>
    <string name="feedback">FEEDBACK</string>
    <string name="pending_amp_received"><![CDATA[Pending & Received]]></string>
    <string name="offers">OFFERS</string>
    <string name="accepted_offers">Accepted Offers</string>
    <string name="search_nav">search nav</string>
    <string name="about_nav">about nav</string>
    <string name="contact_nav">contact nav</string>
    <string name="buysell_nav">buysell nav</string>
    <string name="settings_btn">settings btn</string>
    <string name="offer">Offer :</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="comments">Comments</string>
    <string name="asking_price_text">Asking price :</string>
</resources>