<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">


            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="45dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/settings_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_nav"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/buying_amp_selling"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/valuations"
                        android:textColor="@color/pastel_green"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/bookevaluation_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/book_a_free_valuation"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/upcoming_valuations_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/upcoming_valuations"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookevaluation_text" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/viewings"
                        android:textColor="@color/pastel_green"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/upcoming_valuations_text" />

                    <TextView
                        android:id="@+id/awaiting_action"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/awaiting_action"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/confirmed_viewings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/confirmed"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/awaiting_action" />

                    <TextView
                        android:id="@+id/viewings_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/history"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmed_viewings" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/feedback"
                        android:textColor="@color/pastel_green"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/viewings_history" />

                    <TextView
                        android:id="@+id/awaiting_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/awaiting_action"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                    <TextView
                        android:id="@+id/pending_recieved_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pending_amp_received"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/awaiting_feedback" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/offers"
                        android:textColor="@color/pastel_green"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pending_recieved_feedback" />

                    <TextView
                        android:id="@+id/offers_awaiting_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/awaiting_action"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView22" />

                    <TextView
                        android:id="@+id/accepted_offers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/accepted_offers"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/offers_awaiting_action" />
                </android.support.constraint.ConstraintLayout>
            </ScrollView>


            <ImageView
                android:id="@+id/search_nav"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="42dp"
                android:padding="19dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/search_icon"
                android:contentDescription="@string/search_nav" />

            <ImageView
                android:id="@+id/about_nav"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="19dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buysell_nav"
                app:srcCompat="@drawable/info"
                android:contentDescription="@string/about_nav" />

            <ImageView
                android:id="@+id/contact_nav"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="19dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_nav"
                app:srcCompat="@drawable/contact"
                android:contentDescription="@string/contact_nav" />

            <ImageView
                android:id="@+id/buysell_nav"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@color/colorAccent"
                android:padding="19dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_nav"
                app:srcCompat="@drawable/home"
                android:contentDescription="@string/buysell_nav" />

            <ImageView
                android:id="@+id/settings_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2"
                app:srcCompat="@drawable/settings"
                android:contentDescription="@string/settings_btn" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/settings_btn"
                app:layout_constraintStart_toEndOf="@+id/settings_btn"
                app:layout_constraintTop_toTopOf="@+id/settings_btn" />
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
